# mcp_repos

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
tests/: test_dashboard.py  test_data.py
todo-mcp-server/: CONTRIBUTING.md
todo-mcp-server/docs/: FORMAT.md
todo-mcp-server/src/todo_mcp/: dashboard.py  data.py  server.py
todo-mcp-server/src/todo_mcp/templates/: index.html
todo-mcp-server/tests/: test_filters.py
