# pyproject.toml — todo-mcp-server
# Project manifest, see https://packaging.python.org/en/latest/specifications/pyproject-toml/

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "todo-mcp-server-kit"
version = "0.2.0"
description = "MCP server for a plaintext todo list: CRUD + tags + search + stats Tools/Resources/Prompts, with a built-in browser dashboard."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Zhang Yu", email = "zhangyu200927@gmail.com" }
]
keywords = ["mcp", "model-context-protocol", "todo", "llm", "claude", "agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
]

dependencies = [
    "mcp[cli]>=1.27,<2.0",
]


[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]


[project.urls]
# NOTE: assumes GitHub username `zzcodd` — confirm/replace before publishing.
Homepage = "https://github.com/zzcodd/mcp_repos"
Repository = "https://github.com/zzcodd/mcp_repos"
Issues = "https://github.com/zzcodd/mcp_repos/issues"


[project.scripts]
todo-mcp-server-kit = "todo_mcp.server:main"  # primary (matches PyPI package name)
todo-mcp-server = "todo_mcp.server:main"     # alias
todo-mcp = "todo_mcp.server:main"   # backward-compatible alias


[tool.hatch.build.targets.wheel]
packages = ["src/todo_mcp"]


[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B"]
